testing for windows

--- a/README
+++ b/README
@@ -59,4 +59,4 @@ Yes you can. In the options page there is an image uploader just for that.
 * Added link to Ipsum Lorem Generator
 
 = 1.8 =
-* In Beta
+* In Betaa
